tests/expectations/compiler/const_generics/unresolved_mismatch_fail.out
Error [ETYC0372005]: Unknown struct or record `foo.aleo::Foo`
    --> compiler-test:15:12
     |
  15 |     return Foo::[2 * N * x] { x: 0 };
     |            ^^^
